Fix the _JAVA_OPTIONS filtering.